# release-ros-robot

./: .pre-commit-config.yaml  README.md  action.yml  example-release-workflow.yaml  mise.toml  pyproject.toml
.github/workflows/: ci.yml
scripts/: common.py  execute_release.py  prepare_release.py
tests/: README.md  __init__.py  conftest.py  test_action_glue.py  test_common.py  test_execute_release.py  test_prepare_release.py
