[project]
name = "release-ros-robot"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pre-commit",
    "black",
    "ruff",
    "mypy",
]
action = [
    "bloom",
    "pyyaml",
    "rosdep",
    # bloom 0.13 still imports pkg_resources; remove this pin once bloom > 0.13
    # is released without that dependency.
    "setuptools<81",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.pixi.workspace]
name = "release-ros-robot"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.14"
git = ">=2.53.0,<3"
gh = ">=2.88.1,<3"

[tool.pixi.environments]
default = { features = ["test", "dev", "action"] }

[tool.pixi.tasks]
test = "pytest --no-cov -q"
format-check = "black --check scripts/ tests/"
lint = "ruff check scripts/ tests/"
typecheck = "mypy scripts/common.py scripts/execute_release.py scripts/prepare_release.py --ignore-missing-imports"
rosdep-init = "sudo \"$CONDA_PREFIX/bin/rosdep\" init || true"
rosdep-update = "rosdep update"
